--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css"
+    <link rel="style.css" type="text/css" href="style.css">
     <title>Hacker Times</title>
 
   </head>
@@ -14,13 +14,12 @@
       <!-- header -->
       <header>
         <div class="date">JANUARY 1, 1970</div>
-        <h1>The Hacker Times</h1>
+        <h1 >The Hacker Times</h1>
       </header>
       <!-- navigation -->
-      <nav>
+      <nav id="navigationBar">
         <ul>
           <!-- change list items from block to something else -->
-
           <li><a href="#">HTML & CSS</a></li>
           <li><a href="#">UX & UI</a></li>
           <li><a href="#">JAVASCRIPT</a></li>
@@ -31,6 +30,7 @@
           <li><a href="#">PYTHON</a></li>
         </ul>
       </nav>
+
       <!-- front page article -->
       <main>
         <h2>Have You Tried Turning It On and Off Again?</h2>
