--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="style.css" type="text/css" href="style.css">
+    <!-- <link rel="style.css" type="text/css" href="style.css"> -->
+    <link href="style.css" />
     <title>Hacker Times</title>
-
   </head>
   <body>
     <!-- NEWSPAPER CONTAINER -->
@@ -14,22 +14,26 @@
       <!-- header -->
       <header>
         <div class="date">JANUARY 1, 1970</div>
-        <h1 >The Hacker Times</h1>
+        <h1>The Hacker Times</h1>
       </header>
       <!-- navigation -->
-      <nav id="navigationBar">
-        <ul>
-          <!-- change list items from block to something else -->
-          <li><a href="#">HTML & CSS</a></li>
-          <li><a href="#">UX & UI</a></li>
-          <li><a href="#">JAVASCRIPT</a></li>
-          <li><a href="#">EXPRESS</a></li>
-          <li><a href="#">MONGODB</a></li>
-          <li><a href="#">REACT</a></li>
-          <li><a href="#">CYBERSECURITY</a></li>
-          <li><a href="#">PYTHON</a></li>
-        </ul>
-      </nav>
+      <div class="navBarParent">
+        <div class="navBarChild">
+          <nav id="navigationBar">
+            <ul>
+              <!-- change list items from block to something else -->
+              <li><a href="#">HTML & CSS</a></li>
+              <li><a href="#">UX & UI</a></li>
+              <li><a href="#">JAVASCRIPT</a></li>
+              <li><a href="#">EXPRESS</a></li>
+              <li><a href="#">MONGODB</a></li>
+              <li><a href="#">REACT</a></li>
+              <li><a href="#">CYBERSECURITY</a></li>
+              <li><a href="#">PYTHON</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
 
       <!-- front page article -->
       <main>
