--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="style.css" type="text/css" href="style.css"> -->
-    <link href="style.css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Hacker Times</title>
   </head>
   <body>
@@ -17,8 +16,6 @@
         <h1>The Hacker Times</h1>
       </header>
       <!-- navigation -->
-      <div class="navBarParent">
-        <div class="navBarChild">
           <nav id="navigationBar">
             <ul>
               <!-- change list items from block to something else -->
@@ -29,17 +26,17 @@
               <li><a href="#">MONGODB</a></li>
               <li><a href="#">REACT</a></li>
               <li><a href="#">CYBERSECURITY</a></li>
-              <li><a href="#">PYTHON</a></li>
+              <li><a href="#">PYTHON</a></li> 
             </ul>
           </nav>
-        </div>
-      </div>
+
 
       <!-- front page article -->
       <main>
         <h2>Have You Tried Turning It On and Off Again?</h2>
         <h5>By Maurice Moss</h5>
-        <img src="assets/front-page-article.png" alt="placeholder" />
+        <img class="mainPicture"  src="assets/front-page-article.png" alt="placeholder" />
+<div>
         <p>
           Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee
           cheesecake pastry cake. Soufflé sesame snaps tootsie roll jelly-o
@@ -52,10 +49,11 @@
           pie. Cupcake bear claw donut apple pie halvah sesame snaps macaroon
           tootsie roll
         </p>
+
       </main>
-      <!-- more articles -->
+      <!-- more articles lucid chart , figma -->
       <div class="more-articles">
-        <section>
+        <section class="Section1">
           <h4>Tabs vs. Spaces</h4>
           <img src="assets/article-one.png" alt="placeholder" />
           <p>
@@ -65,7 +63,7 @@
             macaroon tiramisu jelly beans soufflé brownie ...
           </p>
         </section>
-        <section>
+        <section class= "Section1">
           <h4>How Much Caffeine Is Too Much?</h4>
           <img src="assets/article-two.png" alt="placeholder" />
           <p>
