--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
         <h1>The Hacker Times</h1>
       </header>
       <!-- navigation -->
-          <nav id="navigationBar">
-            <ul>
-              <!-- change list items from block to something else -->
-              <li><a href="#">HTML & CSS</a></li>
-              <li><a href="#">UX & UI</a></li>
-              <li><a href="#">JAVASCRIPT</a></li>
-              <li><a href="#">EXPRESS</a></li>
-              <li><a href="#">MONGODB</a></li>
-              <li><a href="#">REACT</a></li>
-              <li><a href="#">CYBERSECURITY</a></li>
-              <li><a href="#">PYTHON</a></li> 
-            </ul>
-          </nav>
-
+      <nav id="navigationBar" >
+        <ul>
+          <!-- change list items from block to something else -->
+          <li><a href="#">HTML & CSS</a></li>
+          <li><a href="#">UX & UI</a></li>
+          <li><a href="#">JAVASCRIPT</a></li>
+          <li><a href="#">EXPRESS</a></li>
+          <li><a href="#">MONGODB</a></li>
+          <li><a href="#">REACT</a></li>
+          <li><a href="#">CYBERSECURITY</a></li>
+          <li><a href="#">PYTHON</a></li>
+        </ul>
+      </nav>
 
       <!-- front page article -->
       <main>
         <h2>Have You Tried Turning It On and Off Again?</h2>
         <h5>By Maurice Moss</h5>
-        <img class="mainPicture"  src="assets/front-page-article.png" alt="placeholder" />
-<div>
+        <img
+          class="mainPicture"
+          src="assets/front-page-article.png"
+          alt="placeholder"
+        />
+
         <p>
           Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee
           cheesecake pastry cake. Soufflé sesame snaps tootsie roll jelly-o
@@ -49,7 +52,6 @@
           pie. Cupcake bear claw donut apple pie halvah sesame snaps macaroon
           tootsie roll
         </p>
-
       </main>
       <!-- more articles lucid chart , figma -->
       <div class="more-articles">
@@ -63,7 +65,7 @@
             macaroon tiramisu jelly beans soufflé brownie ...
           </p>
         </section>
-        <section class= "Section1">
+        <section class="Section1">
           <h4>How Much Caffeine Is Too Much?</h4>
           <img src="assets/article-two.png" alt="placeholder" />
           <p>
